<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/creditcardadd_activity"
        tools:context=".ui.act002.CreditCardAddActivity">

    <ImageView
            android:id="@+id/creditcardadd_iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_cred"
            app:srcCompat="@drawable/ic_credit_card"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            style="@style/Message.EditText"
            android:id="@+id/creditcardadd_tv_message"
            android:text="@string/creditcardadd_message_h2"
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/creditcardadd_iv_logo"/>

    <TextView
            style="@style/Description.EditText"
            android:id="@+id/creditcardadd_tv_description"
            android:text="@string/creditcardadd_description_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/creditcardadd_tv_message" android:layout_marginTop="24dp"/>

    <Button
            style="@style/PicPay.PrimaryButton"
            android:id="@+id/creditcardadd_btn_new"
            android:text="@string/creditcardadd_btn_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>